# Nix project build options
#============================================================================

# dirs
#============================================================================

option(
    'nixstoredir',
    type : 'string',
    value : '/nix/store',
    description : 'path of the Nix store (defaults to /nix/store)')



# compiler args (gcc only?)
#============================================================================

option(
    'ldflags',
    type : 'array',
    value : [
        '-L/usr/local/lib',
        '-L/usr/lib',
        '-L/lib'],
    description : 'Link flags')


option(
    'cxxflags',
    type : 'array',
    value : [
        '-Wdeprecated',
        '-Wno-non-virtual-dtor',
        '-Wno-unused-parameter'],
    description : 'C build flags')




# link args
#============================================================================

option(
    'with_boost',
    type : 'string',
    description : 'path to boost')

option(
    'with_brotli',
    type : 'string',
    description : 'path to libbrotli')

option(
    'with_bz2',
    type : 'string',
    description : 'path to libbz2')

option(
    'with_curl',
    type : 'string',
    description : 'path to libcurl')

option(
    'with_dl',
    type : 'string',
    description : 'path to libdl')

option(
    'with_lzma',
    type : 'string',
    description : 'path to liblzma')

option(
    'with_openssl',
    type : 'string',
    description : 'path to openssl')

option(
    'with_sodium',
    type : 'string',
    description : 'path to libsodium')

option(
    'with_sqlite3',
    type : 'string',
    description : 'path to sqlite3')

option(
    'with_gc',
    type : 'string',
    description : 'path to boehm garbage collector')



# optional dependancies
#============================================================================

#option(
#    'with_gc',
#    type : 'feature',
#    value : 'auto',
#    description : 'Build nix with Boehm garbage collector')

#option(
#    'with_libsodium',
#    type : 'feature',
#    value : 'auto',
#    description : 'Build nix with libsodium')

option(
    'with_editline',
    type : 'string',
    description : 'Build nix with editline for repl')

option(
    'with_s3',
    type : 'boolean',
    value : 'false',
    description : 'Build nix with s3')

option(
    'with_coreutils_bin',
    type : 'string',
    description : 'path of cat, mkdir, etc.')



# misc
#============================================================================
option(
    'disable_doc_gen',
    type : 'boolean',
    value : 'false',
    description : 'disable documentation generation')

option(
    'build_shared_libs',
    type : 'boolean',
    value : 'false',
    description : 'Build nix with shared libs')

option(
    'sandbox_shell',
    type : 'string',
    value : '/usr/bin/busybox',
    description : 'path of a statically-linked shell to use as /bin/sh in sandboxes')

option(
    'normal_var',
    type : 'boolean',
    value : 'true',
    description : 'Whether to use `/nix/var` or the user-overridable `localstatedir`.')
